# DPG-BOT-CODE

./: LICENSE  README.md  README.rst  bot.py  btrickshot.txt  gtrickshot.txt  main.py  pyproject.toml  questions.txt
cogs/: DP.py  Dance.py  Developer.py  Fun.py  Moderation.py  Monsties.py  Nerds.py  RIP.py  Revive.py  Signoff.py  TieThePie.py  Time.py  Utilities.py
